--- a/static/index.html
+++ b/static/index.html
@@ -73,10 +73,10 @@
 						</div>
 					  </div>
 					  <div class="carousel-item">
-						<div class="p-5 mb-4 bg-light rounded-3">
+						<div class="p-3 mb-4 bg-light rounded-3">
 							<div class="container-fluid py-5">
 								<h1 class="display-20 fw-bold">A Real-World WebAssembly Benchmark</h1>
-								<canvas class="my-4 w-100 chartjs-render-monitor" id="myChart" width="3000" height="489" style="height: 500px; width: 1552px;">
+								<canvas class="my-4 w-100 chartjs-render-monitor" id="myChart" width="2500" height="700">
 									<script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
 									<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
 									<script src="./dashboard.js"></script>
