--- a/static/index.html
+++ b/static/index.html
@@ -127,12 +127,15 @@
 						<div class="carousel-item">
 								<div class="p-5 mb-4 rounded-3">
 									<div style="margin-left: 1rem; margin-right: 1rem;">
-										<h1 class="display-10">&nbsp;WebAssembly Pipeline</h1>
+										
 										<img src="https://cdn.jsdelivr.net/gh/b0xt/sobyte-images1/2023/03/28/2130b6d3eed84a34b97c6e43d63c2f5e.png" 
 											class=""
 											width="750" 
 											height="320" 
 											alt="Support">
+										<div style="text-align: center;">
+											<h5 class="display-10">&nbsp;WebAssembly Pipeline</h5>
+										</div>
 									</div>
 								</div>
 						</div>
