--- a/static/html/index.html
+++ b/static/html/index.html
@@ -10,34 +10,60 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-			<style>
-				.bd-placeholder-img {
-					font-size: 1.125rem;
-					text-anchor: middle;
-					-webkit-user-select: none;
-					-moz-user-select: none;
-					-ms-user-select: none;
-					user-select: none;
-				}
+		<style>
+			.bd-placeholder-img {
+				font-size: 1.125rem;
+				text-anchor: middle;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
+			}
 
-				.carousel-control-next, .carousel-control-prev {
-					width: 5%;
-				}
+			.carousel-control-next, .carousel-control-prev {
+				width: 5%;
+			}
 
-				.carousel-indicators {
-					margin-bottom: 2rem;
-				}
+			.carousel-indicators {
+				margin-bottom: 2rem;
+			}
 
-				.container-fluid, .py-5 {
-					padding-left: calc(var(--bs-gutter-x) * .99)
-				}
+			.container-fluid, .py-5 {
+				padding-left: calc(var(--bs-gutter-x) * .99)
+			}
 
-				@media (min-width: 768px) {
-					.bd-placeholder-img-lg {
-					font-size: 3.5rem;
-					}
+			@media (min-width: 768px) {
+				.bd-placeholder-img-lg {
+				font-size: 3.5rem;
 				}
-			</style>
+			}
+
+			#answer:hover {
+				transform: scale(1.1);
+			}
+		</style>
+		<!-- cd "$(go env GOROOT)/misc/wasm" golang에서 제공함. -->
+    	<!-- cd  "$(tinygo env TINYGOROOT)/targets" tinygo에서 제공함. -->
+   		 <script src="http://localhost:3000/wasm_exec.js"></script>
+		<script>
+			function answer() {
+				const go = new Go();
+				WebAssembly.instantiateStreaming(fetch("http://localhost:3000/web.wasm"), go.importObject)
+					.then((wasmModule) => {
+						// 웹 어셈블리 로딩
+						go.run(wasmModule.instance);
+		
+						let str = String.fromCharCode(wasmModule.instance.exports.sendTs()) 
+								+ String.fromCharCode(wasmModule.instance.exports.sendEs())
+								+ String.fromCharCode(wasmModule.instance.exports.sendSt())
+		
+						document.getElementById("text").innerHTML = str
+						wasmModule.instance.exports.test(97)
+					}).catch(error => {
+						console.error(error)
+					});
+			}
+		</script>
 	</head>
 
 	<body class="d-flex flex-column h-100">
@@ -90,6 +116,31 @@
 
 						<div class="carousel-item">
 							<div class="p-5 mb-4 rounded-3">
+								<!-- <div style="margin-left: 5%;"> -->
+								<div class="col-md-6" style="margin-left: 3%;">
+									<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+										<div class="col p-4 d-flex flex-column position-static">
+										<strong class="d-inline-block mb-2 text-primary">WebAssembly For Js</strong>
+										<h2 class="mb-0">Test</h2>
+										<div class="mb-1 text-muted">문제</div>
+										<p class="card-text mb-auto">사진 속 차의 브랜드는 무엇일까요?</p>
+										<p class="card-text mb-auto">&nbsp;&nbsp;정답 : <div id="text"></div> </p>
+										<a href="javascript:answer()" 
+											id="answer"	
+											class="stretched-link">
+											<button class="btn btn-light" type="button">정답은?</button>
+										</a>
+										</div>
+										<div class="col-auto d-none d-lg-block">
+											<img src="https://media.autoexpress.co.uk/image/private/s--X-WVjvBW--/f_auto,t_content-image-full-desktop@1/v1582030849/autoexpress/2020/02/p90382141_highres_bmw-x5-06-2018.jpg" width="200" height="100%" alt="WASM">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item">
+							<div class="p-5 mb-4 rounded-3">
 								<div style="margin-left: 1rem; margin-right: 1rem;">
 									<h1 class="display-10 fw-bold">A Real-World WebAssembly Benchmark MacOS</h1>
 									<canvas class="my-4 w-100 chartjs-render-monitor" id="myChart" width="3000" height="489" style="height: 500px; width: 1552px;"></canvas>
@@ -102,26 +153,7 @@
 							</div>
 						</div>
 
-						<div class="carousel-item">
-							<!-- <div class="p-5 mb-4 rounded-3"> -->
-							<!-- <div style="margin-left: 5%;"> -->
-							<div class="col-md-6">
-								<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-									<div class="col p-4 d-flex flex-column position-static">
-									<strong class="d-inline-block mb-2 text-primary">World</strong>
-									<h3 class="mb-0">Featured post</h3>
-									<div class="mb-1 text-muted">Nov 12</div>
-									<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-									<a href="#" class="stretched-link">Continue reading</a>
-									</div>
-									<div class="col-auto d-none d-lg-block">
-									<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-							
-									</div>
-								</div>
-							</div>
-							<!-- </div> -->
-						</div>
+						
 
 						<div class="carousel-item">
 								<div class="p-5 mb-4 rounded-3">
