--- a/static/html/index.html
+++ b/static/html/index.html
@@ -133,7 +133,8 @@
 								<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 									<div class="col p-4 d-flex flex-column position-static">
 									<strong class="d-inline-block mb-2 text-primary">WebAssembly For Js</strong>
-									<h2 class="mb-0">Test</h2>
+									<h4 class="mb-0">USE Wasm Function</h4>
+									<br />
 									<div class="mb-1 text-muted">문제</div>
 									<p class="card-text mb-auto">사진 속 차의 브랜드는 무엇일까요?</p>
 										<div style="display: flex;">&nbsp;&nbsp;정답 : &nbsp;<p id="text"></p></div><br/>
@@ -156,16 +157,16 @@
 								<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
 									<div class="col p-4 d-flex flex-column position-static">
 									<strong class="d-inline-block mb-2 text-primary">WebAssembly For Js</strong>
-									<h2 class="mb-0">Test</h2>
-									<div class="mb-1 text-muted">BOM Test</div>
+									<h2 class="mb-0">USE BOM</h2>
+									<div class="mb-1 text-muted">Alert</div>
 									<a href="javascript:wasmAlert()" 
 										id="answer"	
 										class="stretched-link">
-										<button class="btn btn-light" type="button">Alert</button>
+										<button class="btn btn-light" type="button">Test!</button>
 									</a>
 									</div>
 									<div class="col-auto d-none d-lg-block">
-										<img src="https://media.autoexpress.co.uk/image/private/s--X-WVjvBW--/f_auto,t_content-image-full-desktop@1/v1582030849/autoexpress/2020/02/p90382141_highres_bmw-x5-06-2018.jpg" width="200" height="100%" alt="WASM">
+										<img src="https://i.ytimg.com/vi/XzNTNP9zHn8/maxresdefault.jpg" width="200" height="100%" alt="WASM">
 									</div>
 								</div>
 							</div>
