--- a/static/html/index.html
+++ b/static/html/index.html
@@ -159,6 +159,8 @@
 									<strong class="d-inline-block mb-2 text-primary">WebAssembly For Js</strong>
 									<h2 class="mb-0">USE BOM</h2>
 									<div class="mb-1 text-muted">Alert</div>
+									<p class="card-text mb-auto">&nbsp;</p>
+										<div style="display: flex;">&nbsp;&nbsp;</div><br/>
 									<a href="javascript:wasmAlert()" 
 										id="answer"	
 										class="stretched-link">
