--- a/static/html/index.html
+++ b/static/html/index.html
@@ -108,6 +108,9 @@
 									<a href="https://webassembly.org/">
 										<button class="btn btn-primary btn-lg" type="button">Official Site</button>
 									</a>
+									<a href="http://localhost:3000/runtime">
+										<button class="btn btn-primary btn-lg" type="button">Runtime</button>
+									</a>
 								</div>
 							</div>
 						</div>
