--- a/static/html/index.html
+++ b/static/html/index.html
@@ -106,8 +106,9 @@
 									<h1 class="display-5 fw-bold">What is WebAssembly?</h1>
 									<p class="col-md-9 fs-4">WebAssembly (abbreviated Wasm) is a binary instruction format for a stack-based virtual machine. Wasm is designed as a portable compilation target for programming languages, enabling deployment on the web for client and server applications.</p>
 									<a href="https://webassembly.org/">
-										<button class="btn btn-primary btn-lg" type="button">Official Site</button>
+										<button class="btn btn-primary btn-lg" type="button">Official</button>
 									</a>
+									&nbsp;&nbsp;
 									<a href="http://localhost:3000/runtime">
 										<button class="btn btn-primary btn-lg" type="button">Runtime</button>
 									</a>
