--- a/static/html/runtime.html
+++ b/static/html/runtime.html
@@ -78,6 +78,17 @@
 				<h2 class="pb-2 border-bottom">WebAssembly Runtime의 이해</h2>
 				<br/>
 				<div class="col d-flex align-items-start">
+					<svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#home"/></svg>
+					<div>
+					<h3 class="fw-bold mb-0 fs-4">Github</h3>
+					<br/>
+					<p> * 참고 : <a href="https://tecoble.techcourse.co.kr/post/2021-11-24-web-assembly/">https://tecoble.techcourse.co.kr/post/2021-11-24-web-assembly/</a></p>
+					</div>
+				</div>
+				<br/>
+
+				<br/>
+				<div class="col d-flex align-items-start">
 					<svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#geo-fill"/></svg>
 					<div>
 						<h3 class="fw-bold mb-0 fs-4">인간과 기계의 소통</h3>
